Implement tournament nav issue badges
